--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <header class="header">
             <div class="container header__container">
                         <a href="index.html" class="logo header__logo"><span class="logo__label">Web</span>Studio</a>
-                            <button type="button" class="burger-menu__button is-open" aria-controls="menu-container" data-menu-button>
+                            <button type="button" class="burger-menu__button" aria-controls="menu-container" data-menu-button>
                                 <svg class="burger-menu__icons" width="25px" height="25px" aria-label="Switch">
                                     <use class="burger-menu__open" href="./images/sprite.svg#icon-menu-open" width="24px" height="16px"></use>
                                     <use class="burger-menu__close" href="./images/sprite.svg#icon-menu-close" width="19px" height="19px"></use>
                                 </svg>
                             </button>
-                        <div class="menu-container is-open" id="menu-container" data-menu>
+                        <div class="menu-container" id="menu-container" data-menu>
                             <nav class="nav">
                                  <ul class="header-list list">
                             <li class="header-list__item"><a href="./index.html" class="header-list__link header-list__link--current">Студия</a></li>
